Bug 863477 - Use SurfaceCaps::Any() for CreateOffscreen for GLContexts for NPAPI plugins. r=cpeterson